--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import '../styles/global.css';
         <p class='heroDescription mt-3'>
           Hello there! My name is Leónidas Neftalí, a software engineer with over 6 years of experience focused on the game development and graphics industry
         </p>
-        <div class='d-flex justify-content-start buttonContainer mt-5'>
+        <div class='d-flex justify-content-start buttonContainer mt-5' style="">
           <button
             class='btn btn-light rounded-pill px-4 py-2 fw-bold'
             style='margin-right: 1.5rem;'>Projects</button
