Added Fuzzkill to projects and some details with hregf

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,13 +32,13 @@ import '../styles/global.css';
       <div class='col-12 col-md-3 col-lg-3 col-xl-3 footerSection'>
         <p class='fw-bold'>Follow Me</p>
         <div class='socialIconsContainer'>
-            <a class='socialMedia rounded-pill' href="https://github.com/Kyn21kx">
+            <a target="_blank" class='socialMedia rounded-pill' href="https://github.com/Kyn21kx">
             <i class='bi bi-github socialIcon'></i>
           </a>
-          <a class='socialMedia rounded-pill' href="#">
+          <a target="_blank" class='socialMedia rounded-pill' href="https://www.linkedin.com/in/le%C3%B3nidas-neftal%C3%AD-gonz%C3%A1lez-campos-7a650a16b/">
             <i class='bi bi-linkedin socialIcon'></i>
           </a>
-          <a class='socialMedia rounded-pill' href="#">
+          <a target="_blank" class='socialMedia rounded-pill' href="https://www.instagram.com/i4mth3breakerbabe/">
             <i class='bi bi-instagram socialIcon'></i>
           </a>
         </div>
@@ -46,7 +46,7 @@ import '../styles/global.css';
     </div>
     <hr class='text-white' />
     <p class='copyright text-white text-center'>
-      © 2025 Hush Engine. All rights reserved. Website built by DevSpace.
+      © 2025 Computer Goblin. All rights reserved. Website built by DevSpace.
     </p>
   </div>
 </footer>
