--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -13,10 +13,9 @@ import '../styles/global.css';
           Hello there! My name is Leónidas Neftalí, a software engineer with over 6 years of experience focused on the game development and graphics industry
         </p>
         <div class='d-flex justify-content-start buttonContainer mt-5' style="">
-          <button
+          <a
             class='btn btn-light rounded-pill px-4 py-2 fw-bold'
-            style='margin-right: 1.5rem;'>Projects</button
-          >
+            style='margin-right: 1.5rem;'>Projects</a>
           <button
             class='btn btn-light rounded-pill px-4 py-2 fw-bold'
             style='margin-right: 1.5rem;'>Interactive Demos</button
