--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import WhatWhy from '../components/What&Why.astro';
 import Highlights from '../components/Highlights.astro';
 import BlogList from '../components/BlogList';
 import Projects from '../components/Projects.tsx';
+import VideoCarousel from '../components/VideoCarousel.tsx';
 import {PROJECTS_DATA} from '../data.ts'
 import Team from '../components/Team.astro';
 import Banner from '../components/Banner.astro';
@@ -24,6 +25,7 @@ const blogPosts = (await getCollection('blog'))
 <Layout>
   <Header />
   <HeroSection />
+  <VideoCarousel client:visible />
   <Projects client:visible projects={PROJECTS_DATA} isHome={true} />
   <BlogList client:visible blogPosts={blogPosts} isHome={true} />
   <Banner />
